--- a/ImWayne/socket_test2/angularjs-socketio-node-sample/public/index.html
+++ b/ImWayne/socket_test2/angularjs-socketio-node-sample/public/index.html
@@ -22,9 +22,11 @@
       <span>{{remaining()}} of {{todos.length}} remaining</span>
       <!-- [ <a href="" ng-click="archive()">archive</a> ] -->
       <ul class="unstyled">
-        <li ng-repeat="todo in todos">
-          <input type="checkbox" ng-model="todo.done" ng-change="change()">
-          <span class="done-{{todo.done}}">{{todo.text}}</span>
+        <li ng-repeat="todo in todos">{{todo.updated_at | date:'yyyy年M月dd日 EEE h:mma '}}
+          <div ng-hide="todo.editing"><input type="checkbox" ng-model="todo.done" ng-change="change()">
+          <span class="done-{{todo.done}}"><span ng-dblclick="edit(todo)">{{todo.text}}</span></span></div>
+           <div ng-show="todo.editing"><input type="checkbox" ng-model="todo.done" ng-change="change()">
+          <span class="done-{{todo.done}}" ><input type="text"  ng-model="todo.text"></span><button ng-click="save(todo)">儲存</button></div>
         </li>
       </ul>
       <form ng-submit="addTodo()" >
